[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/_debug/dice_template.png" type="Texture" id=1]
[ext_resource path="res://assets/rest_bg.png" type="Texture" id=2]
[ext_resource path="res://src/DiceEdit/DiceBag.gd" type="Script" id=3]
[ext_resource path="res://src/DiceEdit/DiceEdit.gd" type="Script" id=4]
[ext_resource path="res://src/DiceEdit/Selected_Face.gd" type="Script" id=5]
[ext_resource path="res://assets/temp/outline.png" type="Texture" id=6]
[ext_resource path="res://src/DiceEdit/Unused_Faces.gd" type="Script" id=7]
[ext_resource path="res://assets/font/m5x7.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 8 )

[node name="DiceEdit" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 700.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 154.0
custom_constants/margin_bottom = 30

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 1240.0
margin_bottom = 124.0

[node name="DiceBag" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer"]
margin_left = 290.0
margin_right = 950.0
margin_bottom = 124.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 10
alignment = 1
script = ExtResource( 3 )
faces = 6

[node name="Dice1" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag"]
margin_right = 124.0
margin_bottom = 124.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 1 )
stretch_mode = 3

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag/Dice1"]
visible = false
texture = ExtResource( 6 )
centered = false
offset = Vector2( -7, -7 )

[node name="Dice2" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag"]
margin_left = 134.0
margin_right = 258.0
margin_bottom = 124.0
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag/Dice2"]
visible = false
texture = ExtResource( 6 )
centered = false
offset = Vector2( -7, -7 )

[node name="Dice3" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag"]
margin_left = 268.0
margin_right = 392.0
margin_bottom = 124.0
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag/Dice3"]
visible = false
texture = ExtResource( 6 )
centered = false
offset = Vector2( -7, -7 )

[node name="Dice4" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag"]
margin_left = 402.0
margin_right = 526.0
margin_bottom = 124.0
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag/Dice4"]
visible = false
texture = ExtResource( 6 )
centered = false
offset = Vector2( -7, -7 )

[node name="Dice5" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag"]
margin_left = 536.0
margin_right = 660.0
margin_bottom = 124.0
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag/Dice5"]
visible = false
texture = ExtResource( 6 )
centered = false
offset = Vector2( -7, -7 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 1240.0
margin_bottom = 158.0

[node name="Selected_Face" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 500.0
rect_min_size = Vector2( 500, 0 )
script = ExtResource( 5 )

[node name="Face0" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Selected_Face"]
margin_left = 128.0
margin_top = -4.0
margin_right = 252.0
margin_bottom = 120.0
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/Selected_Face/Face0"]
visible = false
texture = ExtResource( 6 )
centered = false
offset = Vector2( -7, -7 )

[node name="Face1" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Selected_Face"]
margin_left = -4.0
margin_top = 128.0
margin_right = 120.0
margin_bottom = 252.0
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/Selected_Face/Face1"]
visible = false
texture = ExtResource( 6 )
centered = false
offset = Vector2( -7, -7 )

[node name="Face2" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Selected_Face"]
margin_left = 128.0
margin_top = 128.0
margin_right = 252.0
margin_bottom = 252.0
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/Selected_Face/Face2"]
visible = false
texture = ExtResource( 6 )
centered = false
offset = Vector2( -7, -7 )

[node name="Face3" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Selected_Face"]
margin_left = 260.0
margin_top = 128.0
margin_right = 384.0
margin_bottom = 252.0
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/Selected_Face/Face3"]
visible = false
texture = ExtResource( 6 )
centered = false
offset = Vector2( -7, -7 )

[node name="Face4" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Selected_Face"]
margin_left = 128.0
margin_top = 260.0
margin_right = 252.0
margin_bottom = 384.0
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/Selected_Face/Face4"]
visible = false
texture = ExtResource( 6 )
centered = false
offset = Vector2( -7, -7 )

[node name="Face5" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Selected_Face"]
margin_left = 128.0
margin_top = 392.0
margin_right = 252.0
margin_bottom = 516.0
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/Selected_Face/Face5"]
visible = false
texture = ExtResource( 6 )
centered = false
offset = Vector2( -7, -7 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 504.0
margin_right = 524.0
custom_constants/margin_left = 20

[node name="Unused_Faces" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 20.0
margin_right = 20.0
columns = 5
script = ExtResource( 7 )

[node name="Exit" type="Button" parent="."]
margin_left = 1043.0
margin_top = 540.0
margin_right = 1274.0
margin_bottom = 715.0
custom_fonts/font = SubResource( 1 )
text = "EXIT"

[connection signal="gui_input" from="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag/Dice1" to="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag" method="_on_Dice1_gui_input"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag/Dice2" to="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag" method="_on_Dice2_gui_input"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag/Dice3" to="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag" method="_on_Dice3_gui_input"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag/Dice4" to="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag" method="_on_Dice4_gui_input"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag/Dice5" to="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/DiceBag" method="_on_Dice5_gui_input"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
